# web_socket_rust_playground

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
db/: Cargo.toml
db/src/: .lib.rs.swp  lib.rs
db/src/models/: .mod.rs.swp  .question.rs.swp  mod.rs  question.rs
errors/: Cargo.toml
errors/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  tests.rs
server/src/routes/: mod.rs
server/src/routes/questions/: get_all.rs  mod.rs
