[package]
name = "server"
version = "0.1.0"
authors = ["Nick  Tom Thomas <nickbetty2000@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-cors = "0.5"
actix-http = "2.1"
actix-identity = "0.3"
actix-service = "1.0.6"
actix-web="3.2"
actix-web-actors = "3.0"
actix-rt = "1.1"
dotenv ="0.9.0"
env_logger="0.8.2"
futures = "0.3.5"
futures-util = "0.3.5"
log = "0.4.0"
diesel = {version= "1.4.4", features = ["postgres","r2d2","uuid","chrono"] }
serde = "1.0.80"
serde_json = "1.0.13"
db = { path = "../db" }
